k8s/apps/asmaa-portfolio/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asmaa-portfolio
  namespace: portfolio-asmaa
spec:
  type: ClusterIP
  selector:
    app: asmaa-portfolio
  ports:
    - name: http
      port: 80
      targetPort: 80
